# go-bazel-devcontainer-demo

./: .bazelrc  .gitignore  BAZEL.md  BUILD  CLI_STANDARDS.md  DESIGN.md  MODULE.bazel  PLAN.md  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: README.md  bazel-test.yml  roadtrip-test.yml
backend/: BUILD.bazel  main.go
scripts/roadtrip/: BUILD  CLI_STANDARDS.md  PLAN.md  go.mod  go.sum  main.go  main_test.go
scripts/roadtrip/ai/: BUILD  ai.go  ai_test.go
scripts/roadtrip/env/: BUILD  config.go  env.go  env_test.go
scripts/roadtrip/export/: BUILD  export.go  export_test.go
scripts/roadtrip/prompts/: video_analysis.tmpl
scripts/roadtrip/storage/: BUILD  storage.go  storage_test.go
scripts/roadtrip/storage/testdata/: .gitkeep
scripts/roadtrip/testdata/: .gitkeep
scripts/roadtrip/video/: BUILD  video.go  video_test.go
