module(
    name = "backend",
    version = "0.1.0",
)

bazel_dep(name = "rules_go", version = "0.47.0")
bazel_dep(name = "gazelle", version = "0.36.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//scripts/roadtrip:go.mod")
use_repo(go_deps, "com_github_alecthomas_kong")

go_register_toolchains_ext = use_extension("@rules_go//go:extensions.bzl", "go_register_toolchains")
go_rules_dependencies_ext = use_extension("@rules_go//go:extensions.bzl", "go_rules_dependencies")
gazelle_ext = use_extension("@gazelle//:extensions.bzl", "gazelle")

use_repo(go_register_toolchains_ext, "go_register_toolchains")
use_repo(go_rules_dependencies_ext, "go_rules_dependencies")
use_repo(gazelle_ext, "gazelle_extension")
